# pato-backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .test.env  CHANGELOG.rst  Dockerfile  MANIFEST.in  README.rst  catalog-info.yaml  config.json  deployment.yaml  pyproject.toml  setup.cfg  test
.github/: CONTRIBUTING.rst  pull_request_template.md
.github/workflows/: _dist.yml  _integration.yml  ci.yml  db-docker-image.yml  docker-image.yaml  docker-image.yml  integration.yml
database/: Dockerfile  data.sql
docs/: conf.py  index.rst
docs/developer/how-to/: make-release.rst
docs/developer/tutorials/: dev-install.rst
docs/user/how-to/: run-container.rst
docs/user/reference/: api.rst
docs/user/tutorials/: installation.rst
src/ebic/: __init__.py  main.py
src/ebic/auth/: __init__.py  dummy.py  micro.py  oidc.py  permission.py  template.py
src/ebic/crud/: autoproc.py  collection.py  collections.py  generic.py  groups.py  image.py  list.py  movies.py  path.py  proposals.py  sessions.py  tomogram.py  tomograms.py
src/ebic/extensions/auth/: dummy.py  oidc.py  template.py
src/ebic/models/: api.py  response.py  table.py
src/ebic/routes/: auth.py  autoproc.py  collection.py  collections.py  data_groups.py  groups.py  image.py  images.py  list.py  movies.py  proposal.py  proposals.py  sessions.py  tomogram.py  tomograms.py  visit.py
src/ebic/utils/: auth.py  config.py  database.py  dependencies.py  generic.py  session.py
src/ebic_backend/: __main__.py
src/pato/: __init__.py  main.py
src/pato/assets/: paths.py
src/pato/auth/: __init__.py  dummy.py  micro.py  oidc.py  template.py
src/pato/crud/: alerts.py  autoproc.py  collection_report.py  collections.py  foil_holes.py  generic.py  grid_squares.py  groups.py  movies.py  persons.py  procjob.py  proposals.py  sessions.py  tomograms.py
src/pato/models/: alerts.py  atlas.py  collections.py  parameters.py  persons.py  reprocessing.py  response.py  table.py  templates.py
src/pato/routes/: autoproc.py  collections.py  feedback.py  foil_holes.py  grid_squares.py  groups.py  movies.py  persons.py  procjob.py  proposals.py  sessions.py  tomograms.py
src/pato/utils/: auth.py  bearer.py  config.py  database.py  dependencies.py  email.py  generic.py  logging.py  pika.py  session.py
src/src/pato/: __main__.py  main.py
src/src/pato/auth/: __init__.py
src/src/pato/crud/: generic.py  proposals.py
src/src/pato/models/: parameters.py
src/src/pato/routes/: collections.py
src/src/pato/utils/: config.py  database.py
tests/: conftest.py  test_a.py  test_central_slice.py  test_cli.py  test_collection.py  test_collection_groups.py  test_collection_motion.py  test_ctf.py  test_fft.py  test_micrograph.py  test_motion.py  test_proposal.py  test_sessions.py  test_shift_plot.py  test_tomogram.py  test_tomogram_motion.py  test_visits.py  users.py
tests/autoproc/: test_2d_classification.py  test_3d_classification.py  test_b_factor.py  test_classification.py  test_ctf.py  test_ice_thickness.py  test_motion.py  test_particle_picker.py  test_particles.py  test_resolution.py  test_tomogram.py  test_total_motion.py
tests/collections/: test_attachment.py  test_attachments.py  test_central_slice.py  test_collection.py  test_ctf_defocus.py  test_get.py  test_groups.py  test_ice_thickness.py  test_motion.py  test_particle_count_res.py  test_particles.py  test_processing_jobs.py  test_report.py  test_reprocessing.py  test_resolution.py  test_spa_reprocessing.py  test_tomogram.py  test_tomogram_motion.py  test_tomogram_reprocessing.py  test_total_motion.py
tests/data_collection_groups/: test_atlas.py  test_atlas_image.py  test_collection.py  test_correlation.py  test_get.py  test_grid_squares.py  test_groups.py
tests/email/: test_email.py
tests/foil_holes/: test_movies.py
tests/grid_squares/: test_foil_holes.py  test_image.py  test_tomograms.py
tests/movies/: test_drift.py  test_fft.py  test_ice_thickness.py  test_ids.py  test_micrograph.py
tests/mq/: test_email.py
tests/parameters/: test_spa.py
tests/persons/: test_edit.py
tests/procjob/: test_parameters.py
tests/proposals/: test_data_groups.py  test_proposal.py  test_session.py  test_sh_redirect.py
tests/sessions/: test_alerts.py  test_allow_reprocessing.py  test_create_dc.py  test_sessions.py  test_upload_initial_model.py  test_upload_model.py
tests/tomograms/: test_central_slice.py  test_ctf.py  test_feature.py  test_features.py  test_motion.py  test_movie.py  test_projection.py  test_shift_plot.py  test_tomogram.py
