[build-system]
requires = ["setuptools>=69", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pato"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
description = "PATO's backend"
dependencies = [
    "python-multipart~=0.0.9",
    "pika~=1.3.2",
    "SQLAlchemy~=2.0.40",
    "fastapi~=0.115.12",
    "uvicorn[standard]~=0.34.2",
    "requests~=2.32.3",
    "mysqlclient~=2.2.7",
    "mysql-connector-python~=8.2.0",
    "pydantic[email]~=2.11.5",
    "fpdf2~=2.8.3",
    "types-requests",
    "lims-utils~=0.4.7"
]
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.rst"
requires-python = ">=3.9"    

[project.optional-dependencies]
dev = [
    "black~=23.12.0",
    "mypy",
    "pipdeptree",
    "pre-commit",
    "pytest~=8.3.5",
    "pytest-cov",
    "ruff",
    "tox-direct",
    "types-mock",
    "pytest-asyncio",
    # https://github.com/encode/httpx/blob/master/CHANGELOG.md#0270-21st-february-2024
    "httpx~=0.26.0",
    "setuptools_scm[toml]>=6.2"
]

[project.scripts]
pato = "pato.__main__:main"

[project.urls]
GitHub = "https://github.com/DiamondLightSource/pato-backend"

[[project.authors]] # Further authors may be added by duplicating this section
email = "guilherme.de-freitas@diamond.ac.uk"
name = "Guilherme de Freitas"


[tool.setuptools_scm]
write_to = "src/pato/_version.py"
fallback_version = "1.9.0"

[tool.mypy]
ignore_missing_imports = true # Ignore missing stubs in imported modules

[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = """
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    """
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = "error"

[tool.coverage.run]
data_file = "/tmp/pato.coverage"

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = ["src", "**/site-packages/"]

# tox must currently be configured via an embedded ini string
# See: https://github.com/tox-dev/tox/issues/999
[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist=True

[testenv:{pre-commit,mypy,pytest}]
# Don't create a virtualenv for the command, requires tox-direct plugin
direct = True
passenv = *
allowlist_externals =
    pytest
    pre-commit
    mypy
    # sphinx-build
    # sphinx-autobuild
commands =
    pytest: pytest tests --cov=pato --cov-report term --cov-report xml:cov.xml {posargs}
    mypy: mypy src tests {posargs}
    pre-commit: pre-commit run --all-files {posargs}
setenv = 
    SQL_DATABASE_URL=mysql://root:ispyb-root@127.0.0.1/ispyb
    CONFIG_PATH=config.json
    MQ_USER=guest
    MQ_PASS=guest
"""


[tool.ruff]
src = ["src", "tests"]
line-length = 120
lint.select = [
    "C4",   # flake8-comprehensions - https://beta.ruff.rs/docs/rules/#flake8-comprehensions-c4
    "E",    # pycodestyle errors - https://beta.ruff.rs/docs/rules/#error-e
    "F",    # pyflakes rules - https://beta.ruff.rs/docs/rules/#pyflakes-f
    "W",    # pycodestyle warnings - https://beta.ruff.rs/docs/rules/#warning-w
    "I001", # isort
]
