[metadata]
name = ebic
description = eBIC tomography data API
url = https://gitlab.diamond.ac.uk/lims/ebic_backend
author = Guilherme de Freitas
author_email = guilherme.de-freitas@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
packages = find:
# =src is interpreted as {"": "src"}
# as per recommendation here https://hynek.me/articles/testing-packaging/
package_dir =
    =src

setup_requires =
    setuptools_scm[toml]>=6.2

# Specify any package dependencies below.
install_requires =
    SQLAlchemy==1.4.43
    fastapi==0.88.0 
    uvicorn[standard]==0.19.0
    requests==2.28.1
    mysqlclient==2.1.1
    mysql-connector-python==8.0.31

[options.extras_require]
# For development tests/docs
dev =
    black==22.10.0
    flake8-isort
    isort>5.0
    mypy
    httpx
    pipdeptree
    pre-commit
    pydata-sphinx-theme < 0.10.1
    pytest-cov
    setuptools_scm[toml]>=6.2
    sphinx-autobuild
    sphinx-copybutton
    sphinx-design
    tox
    tox-direct
    types-mock
    pytest-dotenv

[options.packages.find]
where = src
# Don't include our tests directory in the distribution
exclude = tests

# Specify any package data to be included in the wheel below.
# [options.package_data]
# ebic_backend =
#     subpackage/*.yaml

[options.entry_points]
# Include a command line script
console_scripts =
    ebic = ebic.__main__:main

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811,  # support typing.overload decorator
    F722,  # allow Annotated[typ, some_func("some string")]
exclude =
    .tox
    venv
    table.py

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    --cov=ebic --cov-report term --cov-report xml:cov.xml
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = error
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths =
    docs src tests
env_override_existing_values=1
env_files =
    .test.env

[coverage:run]
data_file = /tmp/ebic.coverage

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    src
    **/site-packages/

# Use tox to provide parallel linting and testing
# NOTE that we pre-install all tools in the dev dependencies (including tox).
# Hence the use of allowlist_externals instead of using the tox virtualenvs.
# This ensures a match between developer time tools in the IDE and tox tools.
# Setting TOX_DIRECT=1 in the environment will make this even faster
[tox:tox]
skipsdist = True

[testenv:pytest]
allowlist_externals = pytest
commands = pytest {posargs}

[testenv:mypy]
allowlist_externals = mypy
commands = mypy src tests {posargs}

[testenv:pre-commit]
allowlist_externals = pre-commit
commands = pre-commit run --all-files {posargs}

[testenv:docs]
allowlist_externals =
    sphinx-build
    sphinx-autobuild
commands = sphinx-{posargs:build -EW --keep-going} -T docs build/html
